# cz101-presets-library

./: .eslintrc.json  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  backup.json  biome.json  bun.lockb  bunfig.toml  drizzle.config.ts  index.html  package-lock.json  package.json  plugin.html  prettier.config.ts  renovate.json  setupBrowserTests.ts  setupTests.ts  tailwind.config.js  todo.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/actions/build-desktop/: action.yml
.github/actions/build-plugins/: action.yml
.github/actions/migrate/: action.yml
.github/actions/tests/: action.yml
.github/agents/: bug-issue-driver.agent.md  code-migrator.agent.md  docs-maintainer.agent.md  feature-implementer.agent.md  feature-planner.agent.md  refactor-architect.agent.md  testability-auditor.agent.md
.github/skills/cosmo-pd101-webview/: SKILL.md
.github/skills/cosmo-synth-engine/: SKILL.md
.github/skills/cross-package/: SKILL.md
.github/skills/cz-explorer/: SKILL.md
.github/skills/cz-explorer-desktop/: SKILL.md
.github/workflows/: build-main.yml  build-wasm.yml  ci.yml  release.yml  semantic-pr.yml  test.yml
.ocx/: receipt.jsonc
.opencode/: package.json  worktree.jsonc
.opencode/plugins/: worktree.ts
.opencode/plugins/kdco-primitives/: get-project-id.ts  index.ts  log-warn.ts  shell.ts  temp.ts  with-timeout.ts
.opencode/plugins/worktree/: launch-context.ts  state.ts  terminal.ts
docs/: CASIO_CZ_ENVELOPE_MACHINE_VALUES.md  CZ101_BEAMER_MIGRATION_PLAN.md  CZ101_SYNTH_FEATURES_PLAN.md  CZ101_SYNTH_PLAN.md  CZ101_SYSEX_FORMAT.md  PD_VISUALIZER_RESTYLE_PLAN.md  SYNTH_REFACTOR_PLAN.md  component-testing.md  db-migrations.md
drizzle/: 0000_massive_lyja.sql  0001_fine_skreet.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
plans/: architecture-improvements.md
public/: czSynthWorklet.js  pdVisualizerProcessor.js
public/cz-synth-wasm/: cz_synth.js  cz_synth_bg.wasm  package.json
public/cz-synth-wasma/: cz_synth.d.ts  cz_synth_bg.wasm  cz_synth_bg.wasm.d.ts
scripts/: build-plugin.mjs  build-plugin.sh  cargo-fmt-workspace.mjs  install-plugin.sh  install-wasm-pack.mjs  package-plugin-installers.mjs
src/: App.css  App.tsx  FilterPanel.tsx  MidiChannelContext.tsx  MidiPortContext.tsx  OptionPanel.tsx  PerformanceMode.tsx  PresetDetails.tsx  PresetList.tsx  PresetManager.tsx  RefreshContext.tsx  SaveDraftPresetModal.tsx  SearchFilterContext.tsx  SetlistsPage.tsx  SettingsPanel.tsx  ToastContext.tsx  plugin-main.tsx  useDragDrop.ts  useMidiSetup.ts  usePresetMode.ts  useSetlistMode.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cz-synth/: Cargo.toml
src-tauri/cz-synth-vst/: Cargo.toml  Config.toml
src-tauri/cz-synth-vst/src/: gui.rs  lib.rs
src-tauri/cz-synth-vst/webview/: index.html  package.json  tsconfig.json  vite.config.ts
src-tauri/cz-synth-vst/webview/src/: App.tsx  beamerLegacyBridge.ts
src-tauri/cz-synth/src/: envelope.rs  fx.rs  lib.rs  oscillator.rs  params.rs  processor.rs  voice.rs  wasm.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/tauri-app/: Cargo.toml  tauri.conf.json
src-tauri/tauri-app/capabilities/: default.json
src-tauri/xtask/src/: auv2.rs  auv3.rs  build.rs  main.rs  util.rs  vst3.rs
src/assets/: cznames.ts  factory_presets.json
src/components/: AdsrControls.tsx  AlgoIconGrid.tsx  BaseFxSection.tsx  ChorusSection.tsx  ControlKnob.tsx  DelaySection.tsx  EnvelopeChart.tsx  FileInput.test.tsx  FileInput.tsx  FilterPanel.tsx  FormField.test.tsx  InlineNotice.browser.test.tsx  InlineNotice.test.tsx  InlineNotice.tsx  ModalShell.browser.test.tsx  ModalShell.tsx  PatchParameterViewer.tsx  PerLineWarpBlock.tsx  PerformanceMode.tsx  PhaseDistortionVisualizer.tsx  PresetDetails.tsx  PresetList.tsx  PresetManager.tsx  ReverbSection.tsx  SelectInput.test.tsx  SettingsPanel.tsx  SingleCycleDisplay.tsx  StepEnvelopeEditor.tsx  TextAreaInput.test.tsx  TextAreaInput.tsx  TextInput.test.tsx  TextInput.tsx  WaveformDisplay.tsx  pdAlgorithms.ts
src/components/charts/: EnvelopeChart.tsx  PatchParameterViewer.tsx  WaveformDisplay.tsx
src/components/feedback/: InlineNotice.browser.test.tsx  InlineNotice.test.tsx  InlineNotice.tsx
src/components/forms/: FileInput.test.tsx  FileInput.tsx  FormField.tsx  SelectInput.tsx  TextAreaInput.test.tsx
src/components/layout/: AppLayout.tsx  AppSidebar.tsx  MidiQuickSettings.tsx  SettingsPanel.tsx
src/components/presets/: FilterPanel.tsx  PerformanceMode.tsx  PresetDetails.tsx  PresetList.tsx  PresetManager.tsx
src/components/synth/: ChorusPanel.tsx  DelayPanel.tsx  GlobalVoicePanel.tsx  LfoPanel.tsx  PhaseLinesSection.tsx  PhaseModPanel.tsx  PortamentoPanel.tsx  PresetNavigator.tsx  ReverbPanel.tsx  ScopePanel.tsx  SynthFilterPanel.tsx  SynthHeader.tsx  SynthLcdDisplay.tsx  VibratoPanel.tsx
src/components/ui/: Button.tsx  Card.tsx  CollapsibleCard.tsx  CzButton.tsx  KeyValueBlock.tsx  Modal.test.tsx  ModalShell.tsx
src/context/: MidiChannelContext.tsx  MidiPortContext.tsx  PresetDatabaseContext.tsx  SearchFilterContext.tsx  SidebarContext.tsx  ToastContext.tsx
src/db/: schema.ts
src/features/plugin/: PluginPage.tsx
src/features/synth/: SynthPage.tsx
src/hooks/: useDragDrop.ts  useMidiSetup.ts  useSidebarContent.ts
src/lib/: browserDatabase.ts  czSysexDecoder.ts  factoryPresets.ts  fakePresetDatabase.ts  filterPresets.ts  neonAuthClient.ts  onlineAuthSession.ts  onlineSyncSettings.ts  postgresDatabase.ts  postgresDatabaseWithFallback.ts  presetManager.ts  presetQueryKey.ts  presetSync.ts  remotePresetSyncAdapter.ts  setlistManager.ts  workspaceBackup.ts
src/lib/storage/: keys.ts  (+2 more)
src/routes/: DuplicateFinderPage.tsx  PerformancePage.tsx  PresetsPage.tsx  SetlistsPage.tsx  SynthBackupsPage.tsx  SynthPage.tsx  TagManagerPage.tsx  VisualizerPage.tsx  index.tsx  router.tsx
src/test/: TestAppProviders.tsx  accessibility.ts  browserFixture.tsx  renderWithProviders.tsx  routerFixture.tsx  setupBrowserTests.ts
src/utils/: utils.ts
(+99 files in other folders)
