[workspace]
members = [
    "packages/cz-explorer-desktop",
    "packages/cosmo-synth-engine",
    "packages/cosmo-pd101-plugin",
    "packages/xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fpbrault/cosmo-pd"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
syn = { version = "2", features = ["full", "parsing", "printing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
nih_plug = { package = "nih_plug", git = "https://github.com/robbert-vdh/nih-plug.git" }
wry = "0.47"
raw-window-handle = "0.5"

[workspace.lints]
clippy.unused_async = "warn"


[profile.release]
lto = true
strip = "symbols"

# Debug builds keep full symbols so lldb/Instruments can attach and show
# meaningful stack traces in the DAW process.
[profile.dev]
strip = "none"
debug = true
