[workspace]
members = [
    "tauri-app",
    "cz-synth",
    "cz-synth-vst",
]
resolver = "2"

[profile.release]
lto = true
strip = "symbols"

# Debug builds keep full symbols so lldb/Instruments can attach and show
# meaningful stack traces in the DAW process.
[profile.dev]
strip = "none"
debug = true
