[workspace]
members = [
    "tauri-app",
    "cz-synth",
    "cz-synth-vst",
]
resolver = "2"

[patch."https://github.com/helpermedia/beamer"]
beamer = { git = "https://github.com/helpermedia/beamer", rev = "9ad6c5c60346dac33c2800399f66a56d080e5843" }

[profile.release]
lto = true
strip = "symbols"

# Debug builds keep full symbols so lldb/Instruments can attach and show
# meaningful stack traces in the DAW process.
[profile.dev]
strip = "none"
debug = true
