[workspace]
members = [
    "tauri-app",
    "cz-synth",
    "cz-synth-vst",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
beamer = { git = "https://github.com/helpermedia/beamer", rev = "9ad6c5c60346dac33c2800399f66a56d080e5843" }

[workspace.lints]
clippy.unused_async = "warn"

[profile.release]
lto = true
strip = "symbols"

# Debug builds keep full symbols so lldb/Instruments can attach and show
# meaningful stack traces in the DAW process.
[profile.dev]
strip = "none"
debug = true
