[package]
name = "cz-synth-vst"
version = "0.1.0"
edition = "2021"
description = "CZ-101 synthesizer VST3/AU plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
cz-synth = { path = "../cz-synth" }
clap-clap = "0.5.0"
clap-wrapper = { version = "0.3.0", features = ["vst3", "auv2", "parallel"] }
libm = "0.2"
