[package]
name = "cz-synth-vst"
version = "0.1.0"
edition = "2021"
description = "CZ-101 synthesizer VST3/AU plugin"

[lib]
crate-type = ["cdylib"]

[features]
default = []
vst3 = ["beamer/vst3"]
auv2 = ["beamer/au"]
auv3 = ["beamer/au"]
# Enable Safari Web Inspector on the plugin WebView and load UI from the repo's
# dist/ directory (instead of the AU bundle).  Build with:
#   cargo build -p cz-synth-vst --features debug_gui
debug_gui = []

[dependencies]
cz-synth = { path = "../cz-synth" }
beamer = { workspace = true }
serde_json = "1.0"
libm = "0.2"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
